:recycle: Fixed PMD errors